--- a/microservice-app/projects/crm/src/app/components/crmsidebar/crmsidebar.component.html
+++ b/microservice-app/projects/crm/src/app/components/crmsidebar/crmsidebar.component.html
@@ -1,4 +1,4 @@
-<div class="sidebar" [class.collapsed]="isCollapsed">
+<!-- <div class="sidebar" [class.collapsed]="isCollapsed">
     <button class="toggle-btn" (click)="toggleSidebar()">
       <i class="bi bi-list"></i>
     </button>
@@ -21,4 +21,4 @@
       </li>
     </ul>
   </div>
-  
+   -->
