--- a/microservice-app/projects/hr-management/src/app/app.component.html
+++ b/microservice-app/projects/hr-management/src/app/app.component.html
@@ -1,7 +1,4 @@
 
-<h1>WebSocket Communication with Node.js Server</h1>
-<button (click)="sendToHR()">Send to HR</button>
-<button (click)="sendToCRM()">Send to CRM</button>
-<router-outlet></router-outlet>
+<router-outlet/>
 
 
