--- a/microservice-app/projects/interface/src/styles.css
+++ b/microservice-app/projects/interface/src/styles.css
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@use '@angular/material' as mat;
+:root {
+    @include mat.form-field-overrides((
+      filled-caret-color: orange,
+      filled-focus-active-indicator-color: red,
+    ));
+  }
