--- a/microservice-app/projects/crm/src/app/components/crm-admin/crm-admin.component.html
+++ b/microservice-app/projects/crm/src/app/components/crm-admin/crm-admin.component.html
@@ -1,27 +1,13 @@
+<div class="container">
+  <h1 class="dashboard-title text-left mt-2">📊 Analytics Overview</h1>
 
-<<<<<<< HEAD
-       
-        <!-- Content Area -->
-        <div class="flex-1 bg-gray-100 relative p-6">
-          
-            <!-- Main Content -->
-           
-            <h1 class="text-2xl font-semibold mb-4">
-              Welcome to CRM Dashboard</h1>
-            <p class="text-lg">Select a menu item from the sidebar to get started.</p>
-        </div>
-    
-
-=======
-        <!-- Content Area -->
-       
-
-   
-
-        <div class="w-full h-full flex items-center justify-center">
-            <div class="bg-white shadow-lg rounded-lg p-8 w-2/3">
-              <h2 class="text-xl font-semibold mb-4">Welcome to the Page</h2>
-              <p class="text-gray-600">This is a full-width routed page with centered content.</p>
-            </div>
-          </div>
->>>>>>> da5f0783c8cc063a04529f7154ebc07d84d4e4b5
+  <!-- Stats Cards -->
+  <div class="row">
+    <div class="col-md-3" *ngFor="let lead of userActivity; let i = index">
+      <div class="card" >
+        <h4>{{ lead.title }}</h4>
+        <p>{{ lead.prize }}</p>
+      </div>
+    </div>
+  </div>
+</div>
