--- a/microservice-app/projects/interface/src/app/components/index/index.component.html
+++ b/microservice-app/projects/interface/src/app/components/index/index.component.html
@@ -72,7 +72,7 @@
           </ul>
         </div>
         <div class="col-md-6">
-          <img src="https://cdn.devdojo.com/images/december2020/productivity.png" class="imgs" alt="Boost Productivity" />
+          <img src="https://media.istockphoto.com/id/1479379116/photo/businessman-using-a-computer-and-dashboard-crm-for-management-customer-relationship.webp?a=1&b=1&s=612x612&w=0&k=20&c=1TtREXkeLB7l9Oh073yEusbykd2HuYafDsBeMA5vGm4=" class="imgs" alt="Boost Productivity" />
         </div>
       </div>
       <div class="row align-items-center">
@@ -95,7 +95,7 @@
           </ul>
         </div>
         <div class="col-md-6">
-          <img src="https://cdn.devdojo.com/images/december2020/settings.png" class="imgs" alt="Automated Tasks" />
+          <img src="https://media.istockphoto.com/id/1642381198/photo/customer-relationship-management.webp?a=1&b=1&s=612x612&w=0&k=20&c=juVlnykjdJzFOQvtrtywWubuHJ9YngfQuRjWBfDz3qY=" class="imgs" alt="Automated Tasks" />
         </div>
       </div>
     </div>
